Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-97081

qmllint should turn on compiler warnings on "pragma Strict"

XMLWordPrintable

    • f19582f630 (qt/qtdeclarative/dev)

      If someone explicitly adds a "pragma Strict", then they want the document to conform to whatever qmlsc accepts. qmllint should automatically detect that and do the equivalent of --compiler=error (unless the compiler category is explicitly set).

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            max.goldstein Maximilian Goldstein
            ulherman Ulf Hermann
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes