qmllint: Enable compiler warnings for pragma Strict

If a file sets pragma Strict, it expects to be fully compiler
compliant, so let's enable the warnings for that by default.

Fixes: QTBUG-97081
Change-Id: I0b388f64d99846ee0c03e24397b3a997d4b0173b
Reviewed-by: Andrei Golubev <andrei.golubev@qt.io>
Reviewed-by: Ulf Hermann <ulf.hermann@qt.io>