tests/auto/qml/qmllint/data/pragmaStrict.qml
@@ -1,0 +1,7 @@
+pragma Strict
+
+import QtQml
+
+QtObject {
+    function add(a, b) { return a + b; }
+}
